// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      class="form-text"
      id="textField_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field Text has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldLabelHidden"
      class="ddm-label"
      id="textField_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="textField_fieldLabelHidden"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Text has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      placeholder="Placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Text has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value="value"
    />
  </div>
</div>
`;

exports[`Field Text has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="Id"
      name="textField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Text is not readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Text is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      aria-required="false"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Text is readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      disabled=""
      id="textField"
      name="textField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Text renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldLabelHidden"
      class="ddm-label"
      id="textField_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <input
      aria-errormessage="textField_fieldError"
      aria-invalid="true"
      aria-labelledby="textField_fieldLabel"
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="textField_fieldLabelHidden"
    >
      text
    </span>
  </div>
</div>
`;
